# nexus

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/auth/: mod.rs
src/config/: mod.rs
src/database/: user.rs
src/databases/: user.rs
src/routes/: auth.rs  mod.rs  user.rs
src/serializables/: auth.rs  mod.rs
src/snowflake/: mod.rs
